<?xml version="1.0" encoding="utf-8"?>
<agency.tango.materialintroscreen.parallax.ParallaxLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.BaseActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/slide_use_terms_title"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_parallaxFactor="0.6"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:padding="16dp"
        app:layout_parallaxFactor="0.1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slide_use_terms_content"/>

    </ScrollView>

    <CheckBox android:id="@+id/cb_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/slide_use_terms_checkbox_label"
        android:textColor="@android:color/white"
        app:layout_parallaxFactor="0.9" />

</agency.tango.materialintroscreen.parallax.ParallaxLinearLayout>